--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -21,7 +21,7 @@
     import { GoogleGenerativeAI } from "@google/generative-ai";
 
     // Access your API key (see "Set up your API key" above)
-    const genAI = new GoogleGenerativeAI('AIzaSyBFsXIenlboULmLr8CCQVomTxjTH6m-0gU');
+    const genAI = new GoogleGenerativeAI('apikey');
     const chatbox = document.querySelector(".chatbox");
     const chatInput = document.querySelector(".chat-input textarea");
     const sendChatBtn = document.querySelector(".chat-input span");
